--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "name": "test-elemes",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
